# git-submodules-rs-nix

./: .git_commit_message.txt  .gitignore  .gitmodules  Cargo.toml  README.md  SOP_Nix_Graph_Reflection.md  SOP_Project_Setup.md  SOP_Submodule_Management.md  abstract_mathematical_idea.tex  add_crq_submodules.sh  boot.sh  cargo_manipulation.txt  copygemini.md  debug_nix_build.sh  domain_report.json  emacs.sh  emacs_load_log.txt  file_type_report.json  flake.nix  generate-lock.nix  github_repo_counts.jsonld  launch_emacs_pane.sh  launch_emacs_split.sh  launch_nix_emacs.sh  memes.md  nextstep.sh  notes.org  ontology.json  report_analyzer.py  result  run_emacs_batch_test.sh  run_testit_test.sh  runprompt1.sh  send_emacs_debug_command.sh  setup_incident_template_submodule.sh  setup_rust_tool_prelude.sh  setup_tool_template_submodule.sh  shell.nix  submod.toml  submod_foreach.sh  (+8 more)
.emacs.d/: init.el
.github/workflows/: build-test.yml
benches/: my_profiling_bench.rs
cargo-mcp-wrapper/: Cargo.toml
config/agents/: coderabbit_limits.json
docs/: brainstorm.md  concept_word_as_predicate.md  creative_expressions.md  crq_topological_sort.md  grand_unified_search_architecture.md  learned_articles_summary.md  meta-quasi-fiber-bundle.md  oss_language_classification.md  project_singularity.md  resonance_analysis.md  scalable_analysis_of_large_repositories.md  structured_testing_framework.md  temp_crq_word_analyzer_mod.md
docs/crq/: CRQ-003-nix-graph-reflection.md  CRQ-005-readme-updates.md  CRQ-007-comprehensive-testing.md  CRQ-008-CRQ_of_CRQs.md  CRQ-009-Read_Project_Tool.md  CRQ-010-SOP_and_Lock_File_Updates.md  CRQ-011-GH_CLI_SOPs_and_Scripts.md  CRQ-012-Integrate_git-submodule-tools_to_Lattice.md  CRQ-013-Integrate_gitoxide_to_Lattice.md  CRQ-014-Integrate_magoo_to_Lattice.md  CRQ-015-Integrate_naersk_to_Lattice.md  CRQ-017-Submodule_Lattice_Integration_CRQs_and_Tasks.md  CRQ-019-One_to_One_CRQ_Branch_PR.md  CRQ-020-Braindump_Update.md  CRQ-024-New_SOPs_for_CRQ_Driven_Development.md  audited_llm_interaction.md  conceptual_rust_lattice_types.md  concrete_lattice_analysis_example.md  crq-001-review-git-log-patch.md  crq-002-automate-sops-to-rust.md  crq-002-submodule-report-function.md  crq-003-context-introspector.md  crq-004-formalize-interaction-procedure.md  crq-005-strategic-alignment.md  crq-006-process-unification-kether-review.md  crq-007-gitmodules-recon.md  crq-008-category-theory-hott-submodules.md  crq-009-grand-unified-framework-zoomed-in.md  crq-009-grand-unified-framework-zoomed-out.md  crq-009-grand-unified-framework.md  crq-010-dynamic-information-flow.md  crq-011-bott-periodicity.md  crq-012-naersk-integration.md  crq_document_index.md  k_value_type_semantics.md  lattice_and_quine_relay.md  lattice_code_generation_and_mapping.md  llm_communication_protocol.md  meta_lattice_application.md  orchestration_layer_architecture.md  (+4 more)
docs/crq_standardized/: CRQ-004-rust-documentation-rustdoc-updates-for-binaries.md  CRQ-006-formal-qa-procedures-and-standard-operating-procedures-sops-development.md  CRQ-011-github-cli-sops-and-wrapper-scripts.md  CRQ-016-integrate-submod-into-lattice-system.md  CRQ-018-the-branch-as-a-holistic-development-unit.md  CRQ-025-rust-code-generation-for-lattice-structures-programmatic-construction-of-the-framework.md  CRQ-026-zos-sequence-self-application-iterative-attribute-expansion.md  CRQ-027-Open_Source_Language_and_Compiler_Classification_The_1k_Repo_Grounding.md  CRQ-046-agent-rate-limit-management-and-interaction-receipts.md  CRQ-046-crq-classification-via-comms-analysis-and-state-machine.md  CRQ-052-define-and-optimize-meta-meme-spore-system-for-minizinc.md  CRQ-052-formalize-zos-vibe.md  CRQ-055-enhance-crq-parser-for-coderabbitai-skipped-reviews.md  CRQ-056-implement-web-spider-and-corpus-builder-for-project-analysis.md  CRQ-059-wikipedia-wikidata-extractor.md  (+37 more)
generated_lattice_code/: instance_struct.rs  lattice_struct.rs
generated_lattice_structure/: has_value_count_impls.rs  has_value_count_trait.rs  lattice_layer_struct.rs  value_type.rs
git_project_reader/: Cargo.toml
git_test_repo/: Cargo.toml
hash_extractor_rust/: Cargo.toml
latex_sections/: section_combinatorial_analysis.tex  section_conclusion.tex  section_functions_and_enumeration.tex  section_instances_and_algebraic_composition.tex  section_introduction.tex  section_multi_layered_model.tex  section_n_grams_and_core_topologies.tex  section_primorial_base_sequence.tex  section_proposed_application.tex
lattice_code_generator/: Cargo.toml
lattice_generator_app/: Cargo.toml
lattice_structure_generator/: Cargo.toml
my-new-crate/: Cargo.toml
project_file_lattice_builder/: Cargo.toml
report-analyzer-rs/: Cargo.toml  README.md  TASK.md  default.nix  flake.nix
report-analyzer-rs/src/: analyze_names.rs  analyze_orgs.rs  analyze_strings.rs  apply_emojis.rs  duplicates.rs  input.rs  lcp.rs  main.rs  names_analysis.rs  new_processing.rs  nix_analyzer.rs  org_analysis.rs  processing.rs  temp_rnix_test.rs  types.rs
src/: crq_parser.rs  crq_state_recognizer.rs  godel_numbering_concept.rs  grand_unified_search.rs  lattice_classifier_app.rs  lattice_mapper_app.rs  lattice_model.rs  lattice_types.rs  lib.rs  main.rs  meta_lattice_model.rs  ngram_analyzer.rs  program_self_description.rs  repo_search_simulator.rs  word_classifier.rs  word_predicate_analyzer.rs
submodule-collector/: Cargo.toml
template_function_generator/: Cargo.toml
template_generator_bin/: Cargo.toml
template_generator_cli/: Cargo.toml
tests/: test_crq_state_recognizer.rs
tools/: SOP_Outstanding_Changes_CRQ_Management.md  classify_crq.sh  generate_crq_summary.sh  git-history-parser.sh  new_crq.sh  review_pr.sh
tools/cargo2mcp-server/: Cargo.toml
tools/cargo2mcp-server/src/: main.rs
tools/web_spider_corpus_builder/: Cargo.toml
tools/web_spider_corpus_builder/corpus/web_sources/: example.com_.txt
tools/web_spider_corpus_builder/src/: main.rs
tools/web_spider_corpus_builder/tests/: integration_test.rs
url_extractor/: Cargo.toml
wikipedia_extractor/: Cargo.toml
zos/: Cargo.toml
(+517 files in other folders)
