[workspace]
members = [
    ".",
    
    
    "gitoxide",
    "gitoxide/gitoxide-core",
    "gitoxide/gix",
    "gitoxide/gix-actor",
    "gitoxide/gix-archive",
    "gitoxide/gix-attributes",
    "gitoxide/gix-bitmap",
    "gitoxide/gix-blame",
    "gitoxide/gix-chunk",
    "gitoxide/gix-command",
    "gitoxide/gix-commitgraph",
    "gitoxide/gix-config",
    "gitoxide/gix-config/tests",
    "gitoxide/gix-config-value",
    "gitoxide/gix-credentials",
    "gitoxide/gix-date",
    "gitoxide/gix-diff",
    "gitoxide/gix-diff/tests",
    "gitoxide/gix-dir",
    "gitoxide/gix-discover",
    "gitoxide/gix-features",
    "gitoxide/gix-fetchhead",
    "gitoxide/gix-filter",
    "gitoxide/gix-fs",
    "gitoxide/gix-fsck",
    "gitoxide/gix-glob",
    "gitoxide/gix-hash",
    "gitoxide/gix-hashtable",
    "gitoxide/gix-ignore",
    "gitoxide/gix-index",
    "gitoxide/gix-index/tests",
    "gitoxide/gix-lfs",
    "gitoxide/gix-lock",
    "gitoxide/gix-macros",
    "gitoxide/gix-mailmap",
    "gitoxide/gix-merge",
    "gitoxide/gix-negotiate",
    "gitoxide/gix-note",
    "gitoxide/gix-object",
    "gitoxide/gix-odb",
    "gitoxide/gix-odb/tests",
    "gitoxide/gix-pack",
    "gitoxide/gix-packetline",
    "gitoxide/gix-packetline-blocking",
    "gitoxide/gix-pack/tests",
    "gitoxide/gix-path",
    "gitoxide/gix-pathspec",
    "gitoxide/gix-prompt",
    "gitoxide/gix-protocol",
    "gitoxide/gix-quote",
    "gitoxide/gix-rebase",
    "gitoxide/gix-ref",
    "gitoxide/gix-refspec",
    "gitoxide/gix-ref/tests",
    "gitoxide/gix-revision",
    "gitoxide/gix-revwalk",
    "gitoxide/gix-sec",
    "gitoxide/gix-sequencer",
    "gitoxide/gix-shallow",
    "gitoxide/gix-status",
    "gitoxide/gix-status/tests",
    "gitoxide/gix-submodule",
    "gitoxide/gix-tempfile",
    "gitoxide/gix-tix",
    "gitoxide/gix-trace",
    "gitoxide/gix-transport",
    "gitoxide/gix-traverse",
    "gitoxide/gix-traverse/tests",
    "gitoxide/gix-tui",
    "gitoxide/gix-url",
    "gitoxide/gix-utils",
    "gitoxide/gix-validate",
    "gitoxide/gix-worktree",
    "gitoxide/gix-worktree-state",
    "gitoxide/gix-worktree-state/tests",
    "gitoxide/gix-worktree-stream",
    "gitoxide/gix-worktree/tests",
    "gitoxide/tests/it",
    "gitoxide/tests/tools",
    "git_project_reader",
    "git_test_repo",
    
    
    
    
    
    "naersk/docparse",
    
    "project_file_lattice_builder",
    "report-analyzer-rs",
    
    
    "submodule-collector",
    
    
    
    "tools/agent_comms_analysis/response_analyzer",
    
    "tools/crq_table_generator",
    "tools/crq_word_analyzer",
    "tools/incident-submodule-manager",
    "tools/submodule-orchestrator",
    "tools/tool-template",
    "tools/tool-template/prelude",
    "tools/web_spider_corpus_builder",
    "tools/wikidata",
    
    "tools/wikidata/prelude",
    
    
    
 "sources/meta-introspector/monomcp-rust",
    "sources/meta-introspector/rmcp-agent",
    "sources/meta-introspector/ramparts",
    "sources/meta-introspector/rust-mcp-filesystem",
    "sources/meta-introspector/turbomcp",
    "sources/meta-introspector/rust-mcp-sdk",
    "sources/meta-introspector/paiml-mcp-agent-toolkit",
    "sources/meta-introspector/memkb-mcp-rust",
    "sources/meta-introspector/mcp-discovery",
    "sources/meta-introspector/mcp-attr",
    "sources/meta-introspector/MoCoPr",
 "zos", "tools/latex_compiler_tool"]




 [workspace.dependencies]
anyhow = "1.0.82"
async-stream = "0.3.6"
async-trait = "0.1.80"
axum = { version = "0.8", features = ["ws", "tracing", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "color"] }
colored = "2.0"
config = "0.14"
dirs = "6.0"
futures = "0.3.30"
futures-util = "0.3.31"
glob = "0.3"
jsonrpc-core = "18.0"
langchain-rust = "4.6.0"
rand = "0.8"
regex = "1.11.1"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "brotli", "gzip", "cookies", "multipart"] }
rmcp = { version = "0.5.0", features = ["client", "server", "macros", "schemars", "reqwest", "transport-child-process", "transport-streamable-http-client", "transport-sse-client", "transport-worker", "transport-io", "transport-sse-server", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = { version = "1.0.115", features = ["raw_value", "preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
spinners = "4.1.1"
tabled = "0.20"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std", "fmt", "json", "tracing-log"] }
url = { version = "2.0", features = ["serde"] }
uuid = { version = "1.9.1", features = ["v4", "serde", "v7"] }
yara-x = "1.4"

[workspace.lints.rust]
# TODO: enable this
# unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
#
# Reviewed and allowed lints
needless_continue = "allow"
enum_glob_use = "allow"  # x97
missing_errors_doc = "allow"  # x1792
missing_panics_doc = "allow"  # x447
module_name_repetitions = "allow"  # x125
must_use_candidate = "allow"  # x1696
#
# Lints that we may want to forbid in the future
default_trait_access = "allow"  # x709
doc_markdown = "allow"  # x552
cast_possible_truncation = "allow"  # x216
needless_pass_by_value = "allow"  # x205
return_self_not_must_use = "allow"  # x204
unreadable_literal = "allow"  # x169
items_after_statements = "allow"  # x164
single_match_else = "allow"  # x162
too_many_lines = "allow"  # x161
unnecessary_wraps = "allow"  # x110
match_same_arms = "allow"  # x99
cast_lossless = "allow"  # x91
ignored_unit_patterns = "allow"  # x80
used_underscore_binding = "allow"  # x75
needless_raw_string_hashes = "allow"  # x75
implicit_clone = "allow"  # x70
manual_let_else = "allow"  # x64
cast_precision_loss = "allow"  # x56
trivially_copy_pass_by_ref = "allow"  # x43
redundant_else = "allow"  # x42
if_not_else = "allow"  # x37
match_wildcard_for_single_variants = "allow"  # x35
cast_sign_loss = "allow"  # x35
similar_names = "allow"  # x32
struct_excessive_bools = "allow"  # x29
cast_possible_wrap = "allow"  # x26
explicit_iter_loop = "allow"  # x24
explicit_into_iter_loop = "allow"  # x22
explicit_deref_methods = "allow"  # x22
inconsistent_struct_constructor = "allow"  # x18
range_plus_one = "allow"  # x17
inefficient_to_string = "allow"  # x14
from_iter_instead_of_collect = "allow"  # x13
unused_self = "allow"  # x10
many_single_char_names = "allow"  # x10
manual_string_new = "allow"  # x10
iter_not_returning_iterator = "allow"  # x10
option_option = "allow"  # x9
inline_always = "allow"  # x8
manual_assert = "allow"  # x7
iter_without_into_iter = "allow"  # x6
copy_iterator = "allow"  # x6
should_panic_without_expect = "allow"  # x5
transmute_ptr_to_ptr = "allow"  # x4
match_wild_err_arm = "allow"  # x4
manual_is_variant_and = "allow"  # x4
bool_to_int_with_if = "allow"  # x4
struct_field_names = "allow"  # x3
wildcard_imports = "allow"  # x2
needless_for_each = "allow"  # x2
naive_bytecount = "allow"  # x2
mut_mut = "allow"  # x2
match_bool = "allow"  # x2
fn_params_excessive_bools = "allow"  # x2
filter_map_next = "allow"  # x2
checked_conversions = "allow"  # x2
borrow_as_ptr = "allow"  # x2
unnecessary_join = "allow"  # x1
stable_sort_primitive = "allow"  # x1
no_effect_underscore_binding = "allow"  # x1
empty_docs = "allow"
too_long_first_doc_paragraph = "allow"
large_stack_arrays = "allow"

# Fix one day
result_large_err = "allow"
large_enum_variant = "allow"

[package]
name = "submodules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] } # For command-line argument parsing
walkdir = "2.5"
regex = "1.0"

[dev-dependencies]
iai-callgrind = "0.8"

[[bin]]
name = "git-config-parser"
path = "src/bin/git-config-parser.rs"

[[bin]]
name = "crq-parser-cli"
path = "src/bin/crq-parser-cli.rs"

[[bin]]
name = "state-word-reporter"
path = "src/bin/state-word-reporter.rs"

[[bin]]
name = "ngram-reporter"
path = "src/bin/ngram_reporter.rs"

[[bench]]
name = "my_profiling_bench"
path = "benches/my_profiling_bench.rs"
harness = false
