
[package]
name = "submodules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] } # For command-line argument parsing
regex = "1.0"
walkdir = "2.5"

[dev-dependencies]
iai-callgrind = "0.8"

[[bin]]
name = "git-config-parser"
path = "src/bin/git-config-parser.rs"

[[bin]]
name = "crq-parser-cli"
path = "src/bin/crq-parser-cli.rs"

[[bin]]
name = "state-word-reporter"
path = "src/bin/state-word-reporter.rs"

[[bin]]
name = "ngram-reporter"
path = "src/bin/ngram_reporter.rs"

[[bench]]
name = "my_profiling_bench"
path = "benches/my_profiling_bench.rs"
harness = false
