[package]
name = "report-analyzer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rnix = "0.12"
rowan = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "temp-rnix-test"
path = "src/temp_rnix_test.rs"